--- a/LLM_finetuning.ipynb
+++ b/LLM_finetuning.ipynb
@@ -208,7 +208,7 @@
    "source": [
     "## Note on Model Storage Management\n",
     "\n",
-    "A set of LLM foundation models are supported out-of-the-box as stated above. However, if you're interested in experimenting with additional models, consider the following guidelines:\n",
+    "A set of LLM foundation models are supported out-of-the-box as stated below `BASE_MDOELS` dictionary. However, if you're interested in experimenting with additional models, consider the following guidelines:\n",
     "\n",
     "- **Storage Limitations:** Every user has a default free storage quota. You'll need to ensure that you have enough available space for the models you want to use, especially if your local directory is already storing data.\n",
     "- **Model Supported by PEFT:** If the model you're interested in is supported by the `peft` library by default, the necessary LoRA target modules are predefined and can be found in the [PEFT repository](https://github.com/huggingface/peft/blob/main/src/peft/utils/other.py#L434).\n",
@@ -453,23 +453,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4d8f4cb8-0da5-4572-bd07-bdae1db897a3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'torch' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mFineTuner\u001b[39;00m:\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"A class to handle the fine-tuning of LLM models.\"\"\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, base_model_id: \u001b[39mstr\u001b[39m, model_path: \u001b[39mstr\u001b[39m, device: torch\u001b[39m.\u001b[39mdevice):\n",
-      "\u001b[1;32m/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb Cell 14\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mFineTuner\u001b[39;00m:\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"A class to handle the fine-tuning of LLM models.\"\"\"\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, base_model_id: \u001b[39mstr\u001b[39m, model_path: \u001b[39mstr\u001b[39m, device: torch\u001b[39m.\u001b[39mdevice):\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m        \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m        Initialize the FineTuner with base model, model path, and device.\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m            device (torch.device): Device to run the model on.\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m        \"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://tunnel%2Bslurm_idc/home/ue4799802b0f9e4bc38f5f2b87003ee2/sql_llm/LLM_finetuning.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbase_model_id \u001b[39m=\u001b[39m base_model_id\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class FineTuner:\n",
     "    \"\"\"A class to handle the fine-tuning of LLM models.\"\"\"\n",
@@ -805,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "10a0e504-46b7-4c6e-8d80-b28798607ed6",
    "metadata": {},
    "outputs": [],
