--- a/LLM_finetuning.ipynb
+++ b/LLM_finetuning.ipynb
@@ -59,6 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1aa3c289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,6 +352,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9dd863cc",
    "metadata": {},
    "source": [
     "## Model Loading and Configuration\n",
@@ -361,6 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "aeab82dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,11 +729,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb\n",
+    "#import wandb\n",
     "\n",
-    "os.environ[\"WANDB_PROJECT\"] = f\"text-to-sql-finetune-model-name_{BASE_MODEL.replace('/', '_')}\"\n",
-    "wandb.login()\n",
-    "ENABLE_WANDB = True"
+    "#os.environ[\"WANDB_PROJECT\"] = f\"text-to-sql-finetune-model-name_{BASE_MODEL.replace('/', '_')}\"\n",
+    "#wandb.login()\n",
+    "#ENABLE_WANDB = True"
    ]
   },
   {
@@ -999,6 +1002,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11c2506c",
    "metadata": {},
    "source": [
     "#### Conclusion\n",
@@ -1008,6 +1012,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c458cac4",
    "metadata": {},
    "source": [
     "### Disclaimer for Using Large Language Models\n",
@@ -1049,13 +1054,37 @@
     "\n",
     "Intel’s provision of these resources does not expand or otherwise alter Intel’s applicable published warranties or warranty disclaimers for Intel products or solutions, and no additional obligations, indemnifications, or liabilities arise from Intel providing such resources. Intel reserves the right, without notice, to make corrections, enhancements, improvements, and other changes to its materials."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0db85f25-6270-42fa-a374-a3bbda908720",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5efae26-8ea9-4fcb-abf5-b10132ff1d97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766974eb-129b-4271-a3f2-765b0c6b456c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "pytorch-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch-gpu"
   },
   "language_info": {
    "codemirror_mode": {
