--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -67,6 +67,7 @@
    },
    "outputs": [],
    "source": [
+    "import logging\n",
     "import os\n",
     "import random\n",
     "import re\n",
@@ -185,6 +186,7 @@
    },
    "outputs": [],
    "source": [
+    "MODEL_CACHE_PATH = \"/home/common/data/Big_Data/GenAI/llm_models\"\n",
     "class ChatBotModel:\n",
     "    \"\"\"\n",
     "    ChatBotModel is a class for generating responses based on text prompts using a pretrained model.\n",
@@ -213,6 +215,9 @@
     "        self.torch_dtype = torch_dtype\n",
     "        self.device = select_device(\"xpu\")\n",
     "        self.model_id_or_path = model_id_or_path\n",
+    "        local_model_id = self.model_id_or_path.replace(\"/\", \"--\")\n",
+    "        local_model_path = os.path.join(MODEL_CACHE_PATH, local_model_id)\n",
+    "\n",
     "        if (\n",
     "            self.device == self.device.startswith(\"xpu\")\n",
     "            if isinstance(self.device, str)\n",
@@ -223,34 +228,62 @@
     "        else:\n",
     "            self.autocast = torch.cpu.amp.autocast\n",
     "        self.torch_dtype = torch_dtype\n",
-    "\n",
-    "        if \"llama\" in model_id_or_path:\n",
-    "            self.tokenizer = LlamaTokenizer.from_pretrained(model_id_or_path)\n",
-    "            self.model = (\n",
-    "                LlamaForCausalLM.from_pretrained(\n",
-    "                    model_id_or_path,\n",
-    "                    low_cpu_mem_usage=True,\n",
-    "                    torch_dtype=self.torch_dtype,\n",
-    "                    cache_dir=\"/home/common/data/Big_Data/GenAI\",\n",
+    "        try:\n",
+    "            if \"llama\" in model_id_or_path:\n",
+    "                self.tokenizer = LlamaTokenizer.from_pretrained(local_model_path)\n",
+    "                self.model = (\n",
+    "                    LlamaForCausalLM.from_pretrained(\n",
+    "                        local_model_path,\n",
+    "                        low_cpu_mem_usage=True,\n",
+    "                        torch_dtype=self.torch_dtype,\n",
+    "                    )\n",
+    "                    .to(self.device)\n",
+    "                    .eval()\n",
     "                )\n",
-    "                .to(self.device)\n",
-    "                .eval()\n",
-    "            )\n",
-    "        else:\n",
-    "            self.tokenizer = AutoTokenizer.from_pretrained(\n",
-    "                model_id_or_path, trust_remote_code=True, cache_dir=\"/home/common/data/Big_Data/GenAI/\"\n",
-    "            )\n",
-    "            self.model = (\n",
-    "                AutoModelForCausalLM.from_pretrained(\n",
-    "                    model_id_or_path,\n",
-    "                    low_cpu_mem_usage=True,\n",
-    "                    trust_remote_code=True,\n",
-    "                    torch_dtype=self.torch_dtype,\n",
-    "                    cache_dir=\"/home/common/data/Big_Data/GenAI/\",\n",
+    "            else:\n",
+    "                self.tokenizer = AutoTokenizer.from_pretrained(\n",
+    "                    local_model_path, trust_remote_code=True\n",
     "                )\n",
-    "                .to(self.device)\n",
-    "                .eval()\n",
+    "                self.model = (\n",
+    "                    AutoModelForCausalLM.from_pretrained(\n",
+    "                        local_model_path,\n",
+    "                        low_cpu_mem_usage=True,\n",
+    "                        trust_remote_code=True,\n",
+    "                        torch_dtype=self.torch_dtype,\n",
+    "                    )\n",
+    "                    .to(self.device)\n",
+    "                    .eval()\n",
+    "                )\n",
+    "        except (OSError, ValueError, EnvironmentError) as e:\n",
+    "            logging.info(\n",
+    "                f\"Tokenizer / model not found locally. Downloading tokenizer / model for {self.model_id_or_path} to cache...: {e}\"\n",
     "            )\n",
+    "            if \"llama\" in model_id_or_path:\n",
+    "                self.tokenizer = LlamaTokenizer.from_pretrained(self.model_id_or_path)\n",
+    "                self.model = (\n",
+    "                    LlamaForCausalLM.from_pretrained(\n",
+    "                        self.model_id_or_path,\n",
+    "                        low_cpu_mem_usage=True,\n",
+    "                        torch_dtype=self.torch_dtype,\n",
+    "                    )\n",
+    "                    .to(self.device)\n",
+    "                    .eval()\n",
+    "                )\n",
+    "            else:\n",
+    "                self.tokenizer = AutoTokenizer.from_pretrained(\n",
+    "                    self.model_id_or_path, trust_remote_code=True\n",
+    "                )\n",
+    "                self.model = (\n",
+    "                    AutoModelForCausalLM.from_pretrained(\n",
+    "                        self.model_id_or_path,\n",
+    "                        low_cpu_mem_usage=True,\n",
+    "                        trust_remote_code=True,\n",
+    "                        torch_dtype=self.torch_dtype,\n",
+    "                    )\n",
+    "                    .to(self.device)\n",
+    "                    .eval()\n",
+    "                )\n",
+    "            \n",
     "        self.max_length = 256\n",
     "\n",
     "        if optimize:\n",
@@ -528,7 +561,12 @@
     "\n",
     "from ipywidgets import HTML\n",
     "def interact_with_llm():\n",
-    "    models = [\"Writer/camel-5b-hf\", \"openlm-research/open_llama_3b_v2\",]\n",
+    "    models = [\"Writer/camel-5b-hf\", \n",
+    "              \"openlm-research/open_llama_3b_v2\",\n",
+    "              \"Intel/neural-chat-7b-v3\", \n",
+    "              \"HuggingFaceH4/zephyr-7b-beta\", \n",
+    "              \"tiiuae/falcon-7b\"\n",
+    "             ]\n",
     "    interaction_modes = [\"Interact with context\", \"Interact without context\"]\n",
     "    model_dropdown = Dropdown(options=models, value=models[0], description=\"Model:\")\n",
     "    interaction_mode = Dropdown(options=interaction_modes, value=interaction_modes[1], description=\"Interaction:\")\n",
@@ -654,11 +692,7 @@
   {
    "cell_type": "markdown",
    "id": "2d0d5473-e7fe-4de0-a8c0-f49ba924f35d",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "## Language Models Disclaimer and Information\n",
     "\n",
@@ -702,12 +736,49 @@
     "      year={2023}\n",
     "    }\n",
     "    ```\n",
+    "### Falcon 7B\n",
+    "\n",
+    "- **Model card:** [Falcon 7B](https://huggingface.co/tiiuae/falcon-7b)\n",
+    "- **License:** Apache 2.0\n",
+    "- **References:**\n",
+    "  ```bibtex\n",
+    "    @article{falcon40b,\n",
+    "      title = {{Falcon-40B}: an open large language model with state-of-the-art performance},\n",
+    "      author = {Almazrouei, Ebtesam and Alobeidli, Hamza and Alshamsi, Abdulaziz and Cappelli, Alessandro and Cojocaru, Ruxandra and Debbah, Merouane and Goffinet, Etienne and Heslow, Daniel and Launay, Julien and Malrtic, Quentin and Noune, Badreddine and Pannier, Baptiste and Penedo, Guilherme},\n",
+    "      year={2023}\n",
+    "      }\n",
+    "  ```\n",
+    "### Zephyr 7B\n",
+    "\n",
+    "- **Model card:** [Zephyr 7B](https://huggingface.co/HuggingFaceH4/zephyr-7b-beta)\n",
+    "- **License:** MIT\n",
+    "- **References:**\n",
+    "  ```bibtex\n",
+    "    @misc{alignment_handboox2023,\n",
+    "        author = {Lewis Tunstall and Edward Beeching and Nathan Lambert and Nazneen Rajani and Alexander M. Rush and Thomas Wolf},\n",
+    "        title = {The Alignment Handbook},\n",
+    "        year = {2023},\n",
+    "        publisher = {GitHub},\n",
+    "        journal = {GitHub repository},\n",
+    "        howpublished = {\\url{https://github.com/huggingface/alignment-handbook}}\n",
+    "        }\n",
+    "    ```\n",
+    "### Neural Chat 7b\n",
+    "- **Model card:** [Neural Chat](https://huggingface.co/Intel/neural-chat-7b-v3)\n",
+    "- **License:** Apache 2.0\n",
     "\n",
     "### Disclaimer for Using Large Language Models\n",
     "\n",
     "Please be aware that while Large Language Models like Camel-5B and OpenLLaMA 3b v2 are powerful tools for text generation, they may sometimes produce results that are unexpected, biased, or inconsistent with the given prompt. It's advisable to carefully review the generated text and consider the context and application in which you are using these models.\n",
     "\n",
-    "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above.\n"
+    "Usage of these models must also adhere to the licensing agreements and be in accordance with ethical guidelines and best practices for AI. If you have any concerns or encounter issues with the models, please refer to the respective model cards and documentation provided in the links above.\n",
+    "\n",
+    "To the extent that any public or non-Intel datasets or models are referenced by or accessed using these materials those datasets or models are provided by the third party indicated as the content source. Intel does not create the content and does not warrant its accuracy or quality. By accessing the public content, or using materials trained on or with such content, you agree to the terms associated with that content and that your use complies with the applicable license.\n",
+    "\n",
+    " \n",
+    "Intel expressly disclaims the accuracy, adequacy, or completeness of any such public content, and is not liable for any errors, omissions, or defects in the content, or for any reliance on the content. Intel is not liable for any liability or damages relating to your use of public content.\n",
+    "\n",
+    "Intel’s provision of these resources does not expand or otherwise alter Intel’s applicable published warranties or warranty disclaimers for Intel products or solutions, and no additional obligations, indemnifications, or liabilities arise from Intel providing such resources. Intel reserves the right, without notice, to make corrections, enhancements, improvements, and other changes to its materials.\n"
    ]
   }
  ],
