--- a/optimize_code_generation_with_llms.ipynb
+++ b/optimize_code_generation_with_llms.ipynb
@@ -34,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
     "import os\n",
     "import random\n",
     "import re\n",
@@ -49,7 +50,6 @@
     "import intel_extension_for_pytorch as ipex\n",
     "\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
-    "from transformers import LlamaTokenizer, LlamaForCausalLM\n",
     "\n",
     "from ipywidgets import VBox, HBox, Button, Dropdown, IntSlider, FloatSlider, Text, Output, Label, Layout\n",
     "import ipywidgets as widgets\n",
@@ -140,6 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MODEL_CACHE_PATH = \"/home/common/data/Big_Data/GenAI/llm_models\"\n",
     "class CodeChatBot:\n",
     "    \"\"\"\n",
     "    CodeChatBot is a class for generating responses based on programming-specific prompts using a pretrained LLM.\n",
@@ -168,6 +169,9 @@
     "        self.torch_dtype = torch_dtype\n",
     "        self.device = select_device(\"xpu\")\n",
     "        self.model_id_or_path = model_id_or_path\n",
+    "        local_model_id = self.model_id_or_path.replace(\"/\", \"--\")\n",
+    "        local_model_path = os.path.join(MODEL_CACHE_PATH, local_model_id)\n",
+    "        \n",
     "        if (\n",
     "            self.device == self.device.startswith(\"xpu\")\n",
     "            if isinstance(self.device, str)\n",
@@ -179,19 +183,38 @@
     "            self.autocast = torch.cpu.amp.autocast\n",
     "        self.torch_dtype = torch_dtype\n",
     "\n",
-    "        self.tokenizer = AutoTokenizer.from_pretrained(\n",
-    "            model_id_or_path, trust_remote_code=True, \n",
-    "        )\n",
-    "        self.model = (\n",
-    "            AutoModelForCausalLM.from_pretrained(\n",
-    "                model_id_or_path,\n",
-    "                low_cpu_mem_usage=True,\n",
-    "                trust_remote_code=True,\n",
-    "                torch_dtype=self.torch_dtype,\n",
+    "        try:\n",
+    "            self.tokenizer = AutoTokenizer.from_pretrained(\n",
+    "                local_model_path, trust_remote_code=True, \n",
     "            )\n",
-    "            .to(self.device)\n",
-    "            .eval()\n",
-    "        )\n",
+    "            self.model = (\n",
+    "                AutoModelForCausalLM.from_pretrained(\n",
+    "                    local_model_path,\n",
+    "                    low_cpu_mem_usage=True,\n",
+    "                    trust_remote_code=True,\n",
+    "                    torch_dtype=self.torch_dtype,\n",
+    "                )\n",
+    "                .to(self.device)\n",
+    "                .eval()\n",
+    "            )\n",
+    "        except (OSError, ValueError, EnvironmentError) as e:\n",
+    "            logging.info(\n",
+    "                f\"Tokenizer / model not found locally. Downloading tokenizer / model for {self.model_id_or_path} to cache...: {e}\"\n",
+    "            )\n",
+    "            self.tokenizer = AutoTokenizer.from_pretrained(\n",
+    "                self.model_id_or_path, trust_remote_code=True, \n",
+    "            )\n",
+    "            self.model = (\n",
+    "                AutoModelForCausalLM.from_pretrained(\n",
+    "                    self.model_id_or_path,\n",
+    "                    low_cpu_mem_usage=True,\n",
+    "                    trust_remote_code=True,\n",
+    "                    torch_dtype=self.torch_dtype,\n",
+    "                )\n",
+    "                .to(self.device)\n",
+    "                .eval()\n",
+    "            )\n",
+    "            \n",
     "        self.max_length = 256\n",
     "\n",
     "        if optimize:\n",
@@ -356,12 +379,6 @@
     "                    print(f\" {user_color}{user_icon}You: {user_input}{default_color}\")\n",
     "                if user_input.lower() == \"exit\":\n",
     "                    return\n",
-    "                if \"camel\" in self.model_id_or_path:\n",
-    "                        orig_input = user_input\n",
-    "                        user_input = (\n",
-    "                            \"Below is an instruction that describes a task. \"\n",
-    "                            \"Write a response that appropriately completes the request.\\n\\n\"\n",
-    "                            f\"### Instruction:\\n{user_input}\\n\\n### Response:\")\n",
     "                if with_context:\n",
     "                    self.max_length = 256\n",
     "                    input_ids = self.prepare_input(previous_text, user_input)\n",
