--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -45,7 +45,6 @@
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "#import sys\n",
-    "#!echo \"Installation in progress...\"\n",
     "#!conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
     "#    accelerate==0.23.0 \\\n",
     "#    validators==0.22.0 \\\n",
@@ -53,7 +52,28 @@
     "#    sentencepiece \\\n",
     "#    pillow \\\n",
     "#    ipywidgets \\\n",
-    "#    ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
+    "#    ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
+    "\n",
+    "import sys\n",
+    "import site\n",
+    "from pathlib import Path\n",
+    "\n",
+    "!echo \"Installation in progress...\"\n",
+    "!{sys.executable} -m pip install -U transformers==4.35.2  --no-warn-script-location > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
+    "\n",
+    "def get_python_version():\n",
+    "    return \"python\" + \".\".join(map(str, sys.version_info[:2]))\n",
+    "\n",
+    "def set_local_bin_path():\n",
+    "    local_bin = str(Path.home() / \".local\" / \"bin\") \n",
+    "    local_site_packages = str(\n",
+    "        Path.home() / \".local\" / \"lib\" / get_python_version() / \"site-packages\"\n",
+    "    )\n",
+    "    sys.path.append(local_bin)\n",
+    "    sys.path.insert(0, site.getusersitepackages())\n",
+    "    sys.path.insert(0, sys.path.pop(sys.path.index(local_site_packages)))\n",
+    "\n",
+    "set_local_bin_path()"
    ]
   },
   {
