adding new model

--- a/simple_llm_inference.ipynb
+++ b/simple_llm_inference.ipynb
@@ -584,6 +584,7 @@
     "    models = [\"Writer/camel-5b-hf\", \n",
     "              \"openlm-research/open_llama_3b_v2\",\n",
     "              \"Intel/neural-chat-7b-v3\", \n",
+    "              \"Intel/neural-chat-7b-v3-1\", # https://huggingface.co/Intel/neural-chat-7b-v3-1 - checkout the prompting template on the site to get better response.\n",
     "              \"HuggingFaceH4/zephyr-7b-beta\", \n",
     "              \"tiiuae/falcon-7b\"\n",
     "             ]\n",
