--- a/LLM_finetuning.ipynb
+++ b/LLM_finetuning.ipynb
@@ -107,9 +107,9 @@
     "!{sys.executable} -m pip install --pre bigdl-llm[xpu]==2.4.0b20231116 --no-warn-script-location -f https://developer.intel.com/ipex-whl-stable-xpu > /dev/null\n",
     "!{sys.executable} -m pip install peft==0.5.0 --no-deps > /dev/null\n",
     "!{sys.executable} -m pip install accelerate==0.23.0 --no-deps --no-warn-script-location > /dev/null\n",
-    "!{sys.executable} -m pip install  transformers==4.34.0 --no-warn-script-location > /dev/null\n",
-    "!{sys.executable} -m pip install datasets==2.15 --no-warn-script-location > /dev/null\n",
-    "!{sys.executable} -m pip install fsspec==2023.9.2 > /dev/null\n",
+    "!{sys.executable} -m pip install  transformers==4.34.0 --no-warn-script-location > /dev/null \n",
+    "!{sys.executable} -m pip install datasets==2.15 --no-warn-script-location > /dev/null 2>&1 \n",
+    "!{sys.executable} -m pip install fsspec==2023.9.2 > /dev/null  2>&1\n",
     "!echo \"Installation completed.\"\n",
     "\n",
     "def get_python_version():\n",
@@ -758,10 +758,14 @@
    },
    "outputs": [],
    "source": [
+    "#print(\"installing wandb...\")\n",
+    "#!{sys.executable} -m pip install -U --force wandb==0.15.12 > /dev/null 2>&1\n",
+    "#print(\"installation complete...\")\n",
     "#import wandb\n",
     "\n",
     "#os.environ[\"WANDB_PROJECT\"] = f\"text-to-sql-finetune-model-name_{BASE_MODEL.replace('/', '_')}\"\n",
     "#wandb.login()\n",
+    "\n",
     "#ENABLE_WANDB = True"
    ]
   },
@@ -839,7 +843,7 @@
    "outputs": [],
    "source": [
     "os.environ[\"WANDB_DISABLED\"] = \"true\"\n",
-    "INFERENCE_DEVICE = torch.device(\"cpu\")  \n",
+    "INFERENCE_DEVICE = torch.device(\"cpu\")  # change this to `xpu` to use Intel GPU for inference  \n",
     "\n",
     "def generate_prompt_sql(input_question, context, output=\"\"):\n",
     "    \"\"\"\n",
@@ -916,7 +920,7 @@
     "    \"\"\"Handles SQL query generation for a given text prompt.\"\"\"\n",
     "\n",
     "    def __init__(\n",
-    "        self, base_model_id=BASE_MODEL, use_adapter=False, lora_checkpoint=None\n",
+    "        self, base_model_id=BASE_MODEL, use_adapter=False, lora_checkpoint=None, loaded_base_model=None\n",
     "    ):\n",
     "        \"\"\"\n",
     "        Initialize the InferenceModel class.\n",
@@ -924,7 +928,11 @@
     "            use_adapter (bool, optional): Whether to use LoRA model. Defaults to False.\n",
     "        \"\"\"\n",
     "        try:\n",
-    "            self.model, self.tokenizer = setup_model_and_tokenizer(base_model_id)\n",
+    "            if loaded_base_model:\n",
+    "                self.model = loaded_base_model.model\n",
+    "                self.tokenizer = loaded_base_model.tokenizer\n",
+    "            else:\n",
+    "                self.model, self.tokenizer = setup_model_and_tokenizer(base_model_id)\n",
     "            if use_adapter:\n",
     "                self.model = PeftModel.from_pretrained(self.model, lora_checkpoint)\n",
     "        except Exception as e:\n",
@@ -989,6 +997,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "94c63bc1-9e86-4760-ac9b-c915969ee5fb",
+   "metadata": {},
+   "source": [
+    "**Now let's see how our model performance, Let's generate some SQL queries:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd2c6f25-5c45-4061-9b62-91233149b7a2",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# lets load base model for a baseline comparison\n",
+    "base_model = TextToSQLGenerator(\n",
+    "    use_adapter=False,\n",
+    "    lora_checkpoint=\"\",\n",
+    ")  # setting use_adapter=False to use the base model\n",
+    "finetuned_model = None # comment out finetuned_model if you dont want to cache the finetuned model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b8417146-0c28-4996-81a4-c4b0857d81e7",
@@ -1000,6 +1035,11 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "\n",
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "INFERENCE_DEVICE = torch.device(\"cpu\")  \n",
+    "\n",
     "\n",
     "# let's use some fake sample data\n",
     "samples = \"\"\"\n",
@@ -1019,27 +1059,64 @@
     "]\n",
     "\"\"\"\n",
     "\n",
+    "def _extract_sections(output):\n",
+    "    input_section = output.split(\"### Input:\")[1].split(\"### Context:\")[0]\n",
+    "    context_section = output.split(\"### Context:\")[1].split(\"### Response:\")[0]\n",
+    "    response_section = output.split(\"### Response:\")[1]\n",
+    "    return input_section, context_section, response_section\n",
     "\n",
-    "def run_inference(sample_data, model):\n",
-    "  if INFERENCE_DEVICE.type.startswith(\"xpu\"):\n",
-    "      torch.xpu.empty_cache()\n",
-    "  for row in sample_data:\n",
-    "      try:\n",
-    "          prompt = generate_prompt_sql(row[\"question\"], context=row[\"context\"])\n",
-    "          output = model.generate(prompt)\n",
-    "          print(f\"\\nmodel response: {output}\\n\")\n",
-    "      except Exception as e:\n",
-    "          logging.error(f\"Exception occurred during sample processing: {e}\")\n",
+    "def run_inference(sample_data, model, finetuned=False):\n",
+    "    if INFERENCE_DEVICE.type.startswith(\"xpu\"):\n",
+    "        torch.xpu.empty_cache()\n",
+    "    \n",
+    "    color = \"#4CAF52\" if finetuned else \"#2196F4\"\n",
+    "    model_type = \"finetuned\" if finetuned else \"base\"\n",
+    "    display(HTML(f\"<div style='color:{color};'>Processing queries on {INFERENCE_DEVICE} please wait...</div>\"))\n",
+    "    \n",
+    "    for index, row in enumerate(sample_data):\n",
+    "        try:\n",
+    "            prompt = generate_prompt_sql(row[\"question\"], context=row[\"context\"])\n",
+    "            output = model.generate(prompt)            \n",
+    "            input_section, context_section, response_section = _extract_sections(output)\n",
+    "            \n",
+    "            tabbed_output = f\"\"\"\n",
+    "            <details>\n",
+    "                <summary style='color: {color};'><b>{model_type} model - Sample {index+1}</b> (Click to expand)</summary>\n",
+    "                <div style='padding-left: 20px;'>\n",
+    "                    <p><b>Expected input 📝:</b><br>{input_section}</p>\n",
+    "                    <p><b>Expected context 📚:</b><br>{context_section}</p>\n",
+    "                    <p><b>Generated response 💡:</b><br>{response_section}</p>\n",
+    "                </div>\n",
+    "            </details>\n",
+    "            <hr style='border-top: 1px solid #bbb;'>\"\"\"  # Subtle separator\n",
+    "            display(HTML(tabbed_output))\n",
+    "        except Exception as e:\n",
+    "            logging.error(f\"Exception occurred during sample processing: {e}\")\n",
     "\n",
     "\n",
-    "# other checkpoints are saved to `./lora_adapters`, if the kernel is interrupted the latest model adapter is saved to `./final_model_interrupted/`\n",
-    "LORA_CHECKPOINT = \"./final_model_interrupted/\"\n",
-    "model = TextToSQLGenerator(\n",
-    "    use_adapter=True,\n",
-    "    lora_checkpoint=LORA_CHECKPOINT,\n",
-    ")  # set use_adapter=False to use the base model\n",
-    "sample_data = json.loads(samples)\n",
-    "run_inference(sample_data, model=model)"
+    "\n",
+    "\n",
+    "# checkpoints are saved to `./lora_adapters`.\n",
+    "# Update the USING_CHECKPOINT to the one you want to use.\n",
+    "USING_CHECKPOINT=200\n",
+    "# if the kernel is interrupted the latest adapter (LORA_CHECKPOINT) is `./final_model_interrupted/`\n",
+    "# or else, the final model LORA_CHECKPOINT is `./final_model`\n",
+    "LORA_CHECKPOINT = f\"./lora_adapters/checkpoint-{USING_CHECKPOINT}/\"\n",
+    "\n",
+    "if os.path.exists(LORA_CHECKPOINT):\n",
+    "    sample_data = json.loads(samples)\n",
+    "    run_inference(sample_data, model=base_model)\n",
+    "    if not finetuned_model:\n",
+    "        finetuned_model = TextToSQLGenerator(\n",
+    "            use_adapter=True,\n",
+    "            lora_checkpoint=LORA_CHECKPOINT,\n",
+    "            loaded_base_model=base_model\n",
+    "        )\n",
+    "    run_inference(sample_data, model=finetuned_model, finetuned=True)\n",
+    "\n",
+    "    # To conserve memory we can delete the model\n",
+    "    #del finetuned_model\n",
+    "    #del base_model"
    ]
   },
   {
@@ -1059,7 +1136,10 @@
    "cell_type": "markdown",
    "id": "c458cac4",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
+    "jp-MarkdownHeadingCollapsed": true,
+    "jupyter": {
+     "source_hidden": true
+    }
    },
    "source": [
     "\n",
