--- a/image_to_image.ipynb
+++ b/image_to_image.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
-    "# !echo \"Installation in progress...\"\n",
+    "!echo \"Installation in progress...\"\n",
     "# import sys\n",
     "# !{sys.executable} -m pip install  invisible-watermark > /dev/null\n",
     "# !conda install -y --quiet --prefix {sys.prefix}  -c conda-forge \\\n",
@@ -66,7 +66,9 @@
     "#     ipywidgets \\\n",
     "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
     "import sys\n",
-    "!{sys.executable} -m pip install invisible-watermark --user > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
+    "!{sys.executable} -m pip install invisible-watermark --user > /dev/null 2>&1 \n",
+    "!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
+    "!echo \"Installtion complete...\""
    ]
   },
   {
@@ -581,6 +583,7 @@
    "id": "39941920-7519-4dd3-8e59-37c8f1389dd1",
    "metadata": {
     "editable": true,
+    "scrolled": true,
     "slideshow": {
      "slide_type": ""
     },
@@ -588,6 +591,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run all cells before running this section and wait a few seconds for UI to load\n",
     "image_to_image()"
    ]
   },
