--- a/text_to_image.ipynb
+++ b/text_to_image.ipynb
@@ -49,26 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "791c50f9-4524-4410-8ff9-2c55dc674950",
    "metadata": {
     "jupyter": {
      "source_hidden": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Installation successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Required packages, install if not installed (assume PyTorch* and Intel® Extension for PyTorch* is already present)\n",
     "# #import sys\n",
-    "# !echo \"Installation in progress...\"\n",
+    "!echo \"Installation in progress...\"\n",
     "# !conda install -y --quiet  --prefix {sys.prefix} -c conda-forge \\\n",
     "#     accelerate==0.23.0 \\\n",
     "#     validators==0.22.0 \\\n",
@@ -78,7 +70,9 @@
     "#     ipywidgets \\\n",
     "#     ipython > /dev/null && echo \"Installation successful\" || echo \"Installation failed\"\n",
     "import sys\n",
-    "!{sys.executable} -m pip install invisible-watermark --user > /dev/null && echo \"Installation successful\" || echo \"Installation failed\""
+    "!{sys.executable} -m pip install invisible-watermark --user > /dev/null 2>&1\n",
+    "!{sys.executable} -m pip install transformers huggingface-hub --user > /dev/null 2>&1\n",
+    "!echo \"Installation complete...\""
    ]
   },
   {
@@ -565,7 +559,7 @@
    },
    "outputs": [],
    "source": [
-    "# Run all cells before running this section.\n",
+    "# Run all cells before running this section and wait a few seconds for UI to load\n",
     "prompt_to_image()"
    ]
   },
@@ -666,12 +660,6 @@
     "\n",
     "For detailed information on each model's capabilities, limitations, and best practices, please refer to the respective model cards and associated publications linked below."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bbfdd9f3-5ccb-433d-ac46-f107290f38d9",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
