adding gemma sft example

--- a/gemma_intel_gpu_tuning.ipynb
+++ b/gemma_intel_gpu_tuning.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "8f15b0f9-3b7b-42cb-81fe-4ada30017540",
+   "metadata": {},
+   "source": [
+    "SPDX-License-Identifier: Apache-2.0 \n",
+    "Copyright (c) 2023, Rahul Unnikrishnan Nair <rahul.unnikrishnan.nair@intel.com>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fd7f92c8-c19f-4c6c-a5cd-e0a9bfee98a5",
    "metadata": {},
